# python-middlewareable

./: README.md  environment.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: run-tests.yml
docker/local/: Dockerfile  docker-compose.yml
jupyter/: 00-playground.ipynb  01-instructions.ipynb  02-trait-data-structurable.ipynb  03-trait-auto-instantiable.ipynb  03-trait-auto-structurable.ipynb
src/: README.md  __init__.py  middleware.py  middlewareable.py
src/python_middlewareable/: __init__.py  middleware.py  middlewareable.py  request.py
src/python_middlewareable/classes/: middleware_callable.py  middleware_interface.py  middleware_pipeline.py  middleware_pipeline_interface.py  middleware_processor.py  middleware_processor_interface.py  middleware_stage.py  middleware_stage_interface.py  middlewareable.py  types.py
src/python_middlewareable/partials/with_base/: middleware_callable.py  middleware_pipeline.py  middleware_pipeline_interface.py  middleware_processor.py  middleware_processor_interface.py  middleware_stage.py  middleware_stage_interface.py  types.py
src/python_middlewareable/partials/with_nextcall_chain/: middleware_processor_interface_mixin.py  middleware_processor_mixin.py  nextcall_chain.py  nextcall_chain_interface.py
src/python_middlewareable/partials/with_nextcall_chain_cached/: middleware_processor_interface_mixin.py  middleware_processor_mixin.py  nextcall_chain_cache.py  (+1 more)
src/python_middlewareable/pipeline/: middleware_callable.py  middleware_pipeline.py  middleware_processor.py  middleware_stage.py
src/traits/data_structurable/: README.md
tests/: test_middleware_pipeline.py  test_middlewareable.py  test_trait_autoinstantiable.py  test_trait_autostructurable.py  test_trait_datastructurable.py
tests/stubs/: fake_basic_middlewares.py  fake_datastructurable_trait.py  fake_http_middlewares.py
(+10 files in other folders)
